erDiagram
    SALESPEOPLE ||--o{ CUSTOMERS : "manages"
    SALESPEOPLE ||--o{ ORDERS : "closes"
    CUSTOMERS ||--o{ ORDERS : "places"
    ORDERS ||--|{ ORDER_ITEMS : "contains"
    PRODUCTS ||--o{ ORDER_ITEMS : "included_in"
    ORDERS ||--o| INVOICES : "billed_as"

    SALESPEOPLE {
        int salesperson_id PK
        string name
        string email UK
        string region
        date hire_date
        decimal monthly_target
    }

    CUSTOMERS {
        int customer_id PK
        string company_name
        string tax_id UK
        string industry
        string city
        decimal credit_limit
        int salesperson_id FK
        string status
        timestamp created_at
    }

    PRODUCTS {
        int product_id PK
        string product_code UK
        string product_name
        string category
        decimal unit_price
        decimal cost_price
        int stock_quantity
    }

    ORDERS {
        int order_id PK
        string order_number UK
        int customer_id FK
        int salesperson_id FK
        date order_date
        string status
        decimal total_amount
        timestamp created_at
    }

    ORDER_ITEMS {
        int item_id PK
        int order_id FK
        int product_id FK
        int quantity
        decimal unit_price
        decimal subtotal
    }

    INVOICES {
        int invoice_id PK
        string invoice_number UK
        int order_id FK,UK
        date issue_date
        date due_date
        decimal total_amount
        string payment_status
    }
